# real-estate-source-scraper

./: .gitignore  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: site_profiles.yml  sources.extra.yml  sources.global.csv  sources.yml
docs/: architecture.md  architecture.mmd  ci-status.md  github-actions-ci-template.yml  inventory-notes.md  setup.md  site-analysis.md
examples/: sample_listing.html
scripts/: ci.sh  run_full_safe.sh  run_pilot.sh  run_reviewed_full_scrape.sh
src/realestate_scraper/: __init__.py  analyzer.py  cli.py  extract.py  models.py  robots.py  scraper.py  sources.py
src/realestate_scraper/plugins/: __init__.py  base.py  international.py  japan_portals.py  japan_public.py  registry.py
tests/: test_analyzer.py  test_cli.py  test_extract.py  test_plugins.py  test_sources.py
