[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-scraper"
version = "0.1.0"
description = "Config-driven real estate source inventory, audit, and scraper"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GitHub-GPT Developer" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "openpyxl>=3.1.2",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
realestate-scraper = "realestate_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
